dnl Process this file with autoconf to produce a configure script.
AC_INIT(SynoTermM.c)

dnl Checks for programs.
dnl AC_PROG_YACC
dnl AC_PROG_LEX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl We use a path for perl so the #! line in autoscan will work.
AC_PATH_PROG(PERL, perl, no)
AC_SUBST(PERL)dnl
AC_SUBST(SCRIPTS)dnl
if test "$PERL" = no; then
  AC_MSG_WARN(autoscan will not be built since perl is not found)
fi

dnl We use a path for bison
AC_PATH_PROG(YACC, bison, no)
AC_SUBST(YACC)dnl
if test "$YACC" = no; then
  AC_MSG_WARN(autoscan will not be built since bison is not found)
fi

dnl We use a path for flex
AC_PATH_PROG(LEX, flex, no)
AC_SUBST(LEX)dnl
if test "$LEX" = no; then
  AC_MSG_WARN(autoscan will not be built since flex is not found)
fi

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, log,LDFLAGS=-lm,,)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(socket)

AC_OUTPUT(Makefile)
